<resources>
    <string name="app_name">Effervescence\'17</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_effervescence">Effervesence 17</string>

    <string name="title_info">Info</string>
    <string name="effervescence17">Effervescence17</string>

    <string name="action_settings">Settings</string>

    <string name="title_proshows">Pro Shows</string>

    <string name="transition_avatar_border" translatable="false">avatar_border</string>
    <string name="transition_card" translatable="false">card</string>
    <string name="transition_background" translatable="false">background</string>
    <string name="transition_list" translatable="false">list</string>

    <string name="details_connect">CONNECT</string>
    <string name="details_close">CLOSE</string>
    <string name="details_details">DETAILS</string>
    <string name="answer">Answer</string>
    <string name="connect">CONNECT</string>

    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="about_effe">EFFERVESCENCE (fondly nicknamed EFFE) is the annual cultural festival of IIIT Allahabad and it’s the second largest college fest in Uttar Pradesh and well renowned in India. Generally held in mid October, it attracts national as well as international participation in its multiple events during the fest. It is committed to creating an unforgettable experience for all its visitors, along with providing people from different areas a chance to showcase their talents, explore their hidden potential and win gigantic cash prizes in a very competitive yet learning environment.
    </string>
</resources>



