<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_proshows"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_proshows"/>

    <item
        android:id="@+id/navigation_info"
        android:title="@string/title_info"
        android:icon="@drawable/ic_dashboard_black_24dp" />

</menu>
